@@ -24,6 +24,7 @@ import static app.coronawarn.server.services.distribution.assembly.appconfig.Yam
 import static java.io.File.separator;
 
 import app.coronawarn.server.common.persistence.domain.DiagnosisKey;
+import app.coronawarn.server.common.protocols.external.exposurenotification.ReportType;
 import app.coronawarn.server.common.protocols.internal.ApplicationConfiguration;
 import app.coronawarn.server.services.distribution.assembly.appconfig.UnableToLoadFileException;
 import app.coronawarn.server.services.distribution.assembly.structure.directory.Directory;
@@ -54,7 +55,12 @@ public class Helpers {
         .withKeyData(new byte[16])
         .withRollingStartIntervalNumber(1)
         .withTransmissionRiskLevel(2)
-        .withSubmissionTimestamp(submissionTimeStamp).build();
+        .withSubmissionTimestamp(submissionTimeStamp)
+        .withCountryCode("DE")
+        .withVisitedCountries(List.of("DE"))
+        .withReportType(ReportType.CONFIRMED_CLINICAL_DIAGNOSIS)
+        .withDaysSinceOnsetOfSymptoms(1)
+        .build();
   }
 
   public static DiagnosisKey buildDiagnosisKeyForDateTime(LocalDateTime dateTime) {
@@ -68,23 +74,27 @@ public class Helpers {
   }
 
   public static List<DiagnosisKey> buildDiagnosisKeys(
-      int startIntervalNumber, LocalDateTime submissionTimestamp, int number,
-      String originCountry, List<String> visitedCountries) {
+      int startIntervalNumber, LocalDateTime submissionTimestamp, int number, String originCountry,
+      List<String> visitedCountries,
+      ReportType reportType,
+      int daysSinceOnsetOfSymptoms) {
     long timestamp = submissionTimestamp.toEpochSecond(ZoneOffset.UTC) / 3600;
-    return buildDiagnosisKeys(startIntervalNumber, timestamp, number, originCountry, visitedCountries);
+    return buildDiagnosisKeys(startIntervalNumber, timestamp, number, originCountry, visitedCountries, reportType,
+        daysSinceOnsetOfSymptoms);
   }
 
-
   public static List<DiagnosisKey> buildDiagnosisKeys(int startIntervalNumber, long submissionTimestamp, int number) {
-    return Helpers.buildDiagnosisKeys(startIntervalNumber, submissionTimestamp, number,
-        "DE", Collections.singletonList("DE"));
+    return buildDiagnosisKeys(startIntervalNumber, submissionTimestamp, number,
+        "DE", List.of("DE"), ReportType.CONFIRMED_CLINICAL_DIAGNOSIS, 1);
   }
 
   public static List<DiagnosisKey> buildDiagnosisKeys(int startIntervalNumber,
       long submissionTimestamp,
       int number,
       String originCountry,
-      List<String> visitedCountries) {
+      List<String> visitedCountries,
+      ReportType reportType,
+      int daysSinceOnsetOfSymptoms) {
     return IntStream.range(0, number)
         .mapToObj(ignoredValue -> DiagnosisKey.builder()
             .withKeyData(new byte[16])
@@ -92,7 +102,24 @@ public class Helpers {
             .withTransmissionRiskLevel(2)
             .withSubmissionTimestamp(submissionTimestamp)
             .withCountryCode(originCountry)
-            .withVisitedCountries(visitedCountries).build())
+            .withVisitedCountries(visitedCountries)
+            .withReportType(reportType)
+            .withDaysSinceOnsetOfSymptoms(daysSinceOnsetOfSymptoms)
+            .build())
+        .collect(Collectors.toList());
+  }
+
+  public static List<DiagnosisKey> buildDiagnosisKeysWithFlexibleRollingPeriod(
+      int startIntervalNumber, long submissionTimestamp, int number, int rollingPeriod) {
+    return IntStream.range(0, number)
+        .mapToObj(ignoredValue -> DiagnosisKey.builder()
+            .withKeyData(new byte[16])
+            .withRollingStartIntervalNumber(startIntervalNumber)
+            .withTransmissionRiskLevel(2)
+            .withSubmissionTimestamp(submissionTimestamp)
+            .withRollingPeriod(rollingPeriod)
+            .withVisitedCountries(Collections.singletonList("DE"))
+            .withCountryCode("DE").build())
         .collect(Collectors.toList());
   }
 
